refactor(alarm): rewrite alarm rest api
