# alarm/src/infrastructure/api/routes/securityRulesRouter.ts
@@ -4,36 +4,57 @@ import { SecurityRule } from '@/domain/core/rules/SecurityRule'
 import { RangeRule } from '@/domain/core/rules/RangeRule'
 import { IntrusionRule } from '@/domain/core/rules/IntrusionRule'
 import { HttpStatusCode } from 'axios'
+import { Contact } from 'common/dist/domain/core/Contact.js'
 
-export const securityRulesRouter: Router = express.Router()
+export const router: Router = express.Router()
 
-securityRulesRouter.route('/:id').get((req: Request, res: Response): void => {
-  controller
-    .getSecurityRuleById(req.params.id)
-    .then((securityRule: SecurityRule): void => {
-      res.status(HttpStatusCode.Ok).send(securityRule)
+
+router.route(':id')
+  .get((req: Request, res: Response): void => {
+    controller
+      .getSecurityRuleById(req.params.id)
+      .then((securityRule: SecurityRule): void => {
+        res.status(HttpStatusCode.Ok).send(securityRule)
+      })
+      .catch((): void => {
+        res.send({ error: 'No security rule found' })
+      })
+  })
+  .delete((req: Request, res: Response): void => {
+    controller.deleteSecurityRule(req.params.id).then(() => {
+      res.status(HttpStatusCode.Ok).send({ success: 'Security rule correctly deleted' })
+    }).catch(() => {
+      res.send({ error: 'Security rule not deleted' })
     })
-    .catch((): void => {
-      res.send({ error: 'No security rule found' })
-    })
-})
+  })
 
-securityRulesRouter
-  .route('/exceedings')
+router.route(':id/contacts')
+  .get((req: Request, res: Response): void => {
+    controller
+      .getSecurityRuleContacts(req.params.id)
+      .then((contacts: Contact[]): void => {
+        res.status(HttpStatusCode.Ok).send(contacts)
+      })
+      .catch((): void => {
+        res.send({ error: 'No contacts found' })
+      })
+  })
+
+router.route('ranges')
   .get((req: Request, res: Response): void => {
     controller
       .getRangeRules()
-      .then((exceedingRules: RangeRule[]): void => {
-        res.status(HttpStatusCode.Ok).send(exceedingRules)
+      .then((rangeRules: RangeRule[]): void => {
+        res.status(HttpStatusCode.Ok).send(rangeRules)
       })
       .catch((): void => {
-        res.send({ error: 'No exceeding rules found' })
+        res.send({ error: 'No range rules found' })
       })
   })
   .post((req: Request, res: Response): void => {
     controller
       .createRangeRule(
-        req.body.deviceId.code,
+        req.body.deviceId,
         req.body.creatorId,
         req.body.description,
         req.body.measure,
@@ -44,44 +65,41 @@ securityRulesRouter
         req.body.contacts
       )
       .then((): void => {
-        res.status(HttpStatusCode.Created).send({ success: 'Exceeding rule created' })
+        res.status(HttpStatusCode.Created).send({ success: 'Range rule created' })
       })
       .catch((): void => {
-        res.send({ error: 'Exceeding rule not created' })
+        res.send({ error: 'Range rule not created' })
+      })
+  })
+
+router.route('ranges/:id')
+  .get((req: Request, res: Response): void => {
+    controller
+      .getRangeRuleById(req.params.id)
+      .then((securityRule: SecurityRule): void => {
+        res.status(HttpStatusCode.Ok).send(securityRule)
+      })
+      .catch((): void => {
+        res.send({ error: 'No security rule found' })
       })
   })
   .put((req: Request, res: Response): void => {
-    controller
-      .updateRangeRule(
-        req.body.id,
-        req.body.description,
-        req.body.min,
-        req.body.max,
-        new Date(req.body.from),
-        new Date(req.body.to),
-        req.body.contacts
-      )
-      .then((): void => {
-        res.status(HttpStatusCode.Ok).send({ success: 'Exceeding rule updated' })
-      })
-      .catch((): void => {
-        res.send({ error: 'Exceeding rule not updated' })
-      })
+    controller.updateRangeRule(
+      req.body.id,
+      req.body.description,
+      req.body.min,
+      req.body.max,
+      new Date(req.body.from),
+      new Date(req.body.to),
+      req.body.contacts
+    ).then(() => {
+      res.status(HttpStatusCode.Ok).send({ success: 'Range rule updated' })
+    }).catch(() => {
+      res.send({ error: 'Range rule not updated' })
+    })
   })
 
-securityRulesRouter.route('/exceedings/:id').delete((req: Request, res: Response): void => {
-  controller
-    .deleteSecurityRule(req.params.id)
-    .then((): void => {
-      res.status(HttpStatusCode.Ok).send({ success: 'Exceeding rule correctly deleted' })
-    })
-    .catch((): void => {
-      res.send({ error: 'Exceeding rule not deleted' })
-    })
-})
-
-securityRulesRouter
-  .route('/intrusions')
+router.route('intrusions')
   .get((req: Request, res: Response): void => {
     controller
       .getIntrusionRules()
@@ -95,7 +113,7 @@ securityRulesRouter
   .post((req: Request, res: Response): void => {
     controller
       .createIntrusionRule(
-        req.body.deviceId.code,
+        req.body.deviceId,
         req.body.creatorId,
         req.body.description,
         req.body.objectClass,
@@ -111,31 +129,29 @@ securityRulesRouter
         res.send({ error: 'Intrusion rule not created' })
       })
   })
-  .put((req: Request, res: Response): void => {
+
+router.route('intrusions/:id')
+  .get((req: Request, res: Response): void => {
     controller
-      .updateIntrusionRule(
-        req.body.id,
-        req.body.description,
-        req.body.objectClass,
-        new Date(req.body.from),
-        new Date(req.body.to),
-        req.body.contacts
-      )
-      .then((): void => {
-        res.status(HttpStatusCode.Ok).send({ success: 'Intrusion rule updated' })
+      .getIntrusionRuleById(req.params.id)
+      .then((securityRule: SecurityRule): void => {
+        res.status(HttpStatusCode.Ok).send(securityRule)
       })
       .catch((): void => {
-        res.send({ error: 'Intrusion rule not updated' })
+        res.send({ error: 'No security rule found' })
       })
   })
-
-securityRulesRouter.route('/intrusions/:id').delete((req: Request, res: Response): void => {
-  controller
-    .deleteSecurityRule(req.params.id)
-    .then((): void => {
-      res.status(HttpStatusCode.Ok).send({ success: 'Intrusion rule correctly deleted' })
+  .put((req: Request, res: Response): void => {
+    controller.updateIntrusionRule(
+      req.body.id,
+      req.body.description,
+      req.body.objectClass,
+      new Date(req.body.from),
+      new Date(req.body.to),
+      req.body.contacts
+    ).then(() => {
+      res.status(HttpStatusCode.Ok).send({ success: 'Intrusion rule updated' })
+    }).catch(() => {
+      res.send({ error: 'Intrusion rule not updated' })
     })
-    .catch((): void => {
-      res.send({ error: 'Intrusion rule not deleted' })
-    })
-})
+  })
