# docs/api/openapi/alarm/specification.yml
@@ -8,6 +8,27 @@ tags:
       description: Operations related to devices
 
 paths:
+    /rules/{id}/:
+        get:
+            summary: Get a rule by Id
+            tags: [Alarm]
+            responses:
+                200:
+                    description: The rule details
+                403:
+                    description: User is not authorized
+        delete:
+            summary: Delete a rule
+            tags: [Alarm]
+            responses:
+                200:
+                    description: The rule was correctly deleted
+                403:
+                    description: User is not authorized
+                404:
+                    description: The rule was not found
+    /rules/{id}/contacts/:
+        get:
     /rules/ranges/:
         get:
             summary: Get all ranges rules
@@ -54,16 +75,6 @@ paths:
             responses:
                 200:
                     description: The rule was correctly updated
-                403:
-                    description: User is not authorized
-                404:
-                    description: The rule was not found
-        delete:
-            summary: Delete a range rule
-            tags: [Alarm]
-            responses:
-                200:
-                    description: The rule was correctly deleted
                 403:
                     description: User is not authorized
                 404:
@@ -116,13 +127,3 @@ paths:
                     description: The range rule was correctly updated
                 403:
                     description: User is not authorized
-        delete:
-            summary: Delete an intrusion rule
-            tags: [Alarm]
-            responses:
-                200:
-                    description: The rule was correctly deleted
-                403:
-                    description: User is not authorized
-                404:
-                    description: The rule was not found
